# phantom

./: .gitignore  .gitmodules  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  check_links.py  docker-compose.yml  gemini.md  test_all.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: android_ci.yml  ci.yml  release.yml
android_app/: README.md  pubspec.yaml
android_app/android/app/: build.gradle.kts
android_app/android/app/src/main/: AndroidManifest.xml
android_app/android/app/src/main/cpp/: CMakeLists.txt  phantom_jni.cpp
android_app/android/app/src/main/kotlin/com/phantom/phantom_android/: DistillationWorker.kt  MainActivity.kt  (+3 more)
android_app/android/app/src/main/res/layout/: phantom_overlay.xml
android_app/android/app/src/main/res/values/: strings.xml
android_app/android/app/src/main/res/xml/: accessibility_service_config.xml
android_app/integration_test/: test_accessibility_integration.dart  test_inference_integration.dart  test_overlay_integration.dart
android_app/lib/: db.dart  main.dart
android_app/lib/engine/: llama_ffi.dart  model_manager.dart  tasks.dart
android_app/lib/screens/: main_screen.dart  models_screen.dart  overlay_screen.dart  settings_screen.dart
android_app/test/: widget_test.dart
android_app/test/unit/: downloader_test.dart  model_manager_test.dart  schema_test.dart  tasks_test.dart
android_app/test/widget/: models_screen_test.dart  overlay_screen_test.dart  settings_test.dart
docs/: signing_instructions.md
engine/: README.md  pyproject.toml
engine/src/phantom_engine/: __main__.py  downloader.py  model_manager.py  schemas.py  tasks.py
scripts/: bump.py  release.py
shared/: db.rs  schema.sql
tests/: test_engine.py
tests/benchmarks/: test_bench_inference.py
tests/integration/: test_e2e.py
ui/: README.md  package-lock.json  package.json
ui/src/: App.tsx  index.css  store.ts
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/capabilities/: default.json
ui/src-tauri/icons/: icon.icns
ui/src-tauri/src/: main.rs
ui/src/__tests__/: ModelBadge.test.tsx  Settings.test.tsx  StreamOutput.test.tsx  TaskBar.test.tsx  modelUtils.test.ts
ui/src/components/: CustomPrompt.tsx  LoadingAnimation.tsx  ModelBadge.tsx  ModelManager.tsx  Overlay.tsx  Settings.tsx  StreamOutput.tsx  TaskBar.tsx
ui/src/utils/: modelUtils.ts
watcher/: Cargo.toml  README.md
watcher/src/: clipboard.rs  context_grabber.rs  lib.rs  logger.rs  main.rs  scheduler.rs
watcher/tests/: integration.rs
