[project]
name = "phantom-engine"
version = "0.3.0"
description = "Phantom AI Engine"
authors = [
  { name = "990aa" }
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "huggingface-hub",
    "hf-transfer",
    "llama-cpp-python",
    "pillow",
    "pydantic",
    "rich",
    "typer",
    "pyinstaller>=6.19.0",
]

[dependency-groups]
dev = [
    "psutil>=7.2.2",
    "pyperclip>=1.11.0",
    "pytest",
    "pytest-benchmark>=5.2.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/phantom_engine"]

[project.scripts]
phantom-engine = "phantom_engine.__main__:app"
