[package]
name = "phantom-watcher"
version = "0.4.0"
authors = ["990aa"]
edition = "2021"
rust-version = "1.75"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
arboard = "3.4"
global-hotkey = "0.3"
screenshots = "0.8"
log = "0.4"
env_logger = "0.11"
dirs = "5.0"
lazy_static = "1.5.0"

[dependencies.windows]
version = "0.52"
features = [
    "Win32_UI_Accessibility",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_System_ProcessStatus",
    "Win32_UI_WindowsAndMessaging",
]

[dependencies.windows-sys]
version = "0.52"
